[project]
name = "jerry-tools"
version = "0.1.0"
description = "Tools for Jerry Firmware"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pylint>=3.0.0",
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "clang-format>=17.0.0",
    "lizard>=1.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]
